<resources>
    <string name="app_name">Escritório Contábil Talita e Vinicius Area Acecss</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="login">Login</string>
    <string name="textoExemplo">Welcome to the Customer Area.</string>
    <string name="msgError">User error</string>
    <string name="bemVindo">Welcome to your area!!</string>
    <string name="acessoConta">Access your account</string>
    <string name="ola">Hello!!!</string>
    <string name="dadosCadastrais">Consult Your Data</string>
    <string name="contabil">Accounting Data</string>
    <string name="fiscal">Tax Data</string>
    <string name="pessoal">Payroll Access</string>

    //Tela3
    <string name="appName">User registration!!</string>
    <string name="pass">Password</string>
    <string name="buttLogin">Login</string>


    //Tela 4
    <string name="welcome" translatable="false">Hello! Welcome, </string>
    <string name="introduction" translatable="false">Through this page, you can consult the registered users and register new users.

        Click on the desired option below.
    </string>
    <string name="buttView" translatable="false">Registered users</string>
    <string name="buttStar" translatable="false">Register Users</string>


    //Tela 5
    <string name="NameDonat" translatable="false">Full Name</string>
    <string name="Email" translatable="false">E-mail</string>
    <string name="Phone" translatable="false">Phone</string>
    <string name="Value" translatable="false">CPF</string>
    <string name="Inst" translatable="false">Data Nascimento</string>
    <string name="buttinCadastro" translatable="false">Register</string>


</resources>
