<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:outlineAmbientShadowColor="@color/purple_200"
    android:textAlignment="viewStart"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:text="@string/acessoConta"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textColorHint="#009688"
        android:textColorLink="#8BC34A"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edUsuario"
        android:layout_width="258dp"
        android:layout_height="77dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="inherit"
        app:layout_constraintBottom_toTopOf="@+id/edSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/edSenha"
        android:layout_width="258dp"
        android:layout_height="77dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="@+id/edUsuario"
        app:layout_constraintStart_toStartOf="@+id/edUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edUsuario" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/remember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edSenha" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="217dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:text="@string/login"
        android:textColorLink="#03A9F4"
        app:layout_constraintEnd_toEndOf="@+id/edSenha"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/edSenha"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="302dp"
        android:layout_height="126dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoectv" />

</androidx.constraintlayout.widget.ConstraintLayout>
